# DTIProcessToolkit

./: CMakeLists.txt
Applications/: dtiestim.cxx  dtiprocess.cxx  fiberprocess.cxx  scalartransform.cxx
Applications/dwiAtlas/: dwiAtlas.cxx
PrivateLibrary/: tensordeformation.cxx  tensorscalars.cxx
Testing/: ScalarDeformationApplyTest.cxx  localTestMain.h
